# non-factoid-answer-highlighting

./: .gitattributes  LICENSE  Makefile  README.md  example.ipynb  pyproject.toml  setup.cfg
bert_train/: qa_bert.py  run_fit.py
highlighting/: __init__.py  __main__.py  attention.py  dataset.py  highlighter.py  model.py  train.py  utils.py
highlighting/data/: __init__.py  antique_ids.txt  queries_for_study_from_chhir2019.csv
highlighting/data/nfl6_pretrained/: config.json
